--- a/shopping/src/recipeDetail/RecipeDetailPage.css
+++ b/shopping/src/recipeDetail/RecipeDetailPage.css
@@ -1,5 +1,5 @@
 .Detail-container {
-  padding: 30px 20px;
+  padding: 38px 20px 0px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
